# Multimodal-Coordination-Detection-Toolkit

./: .gitignore  LICENSE  README.md  coordination_compute_function.py  coordination_compute_functions.py  database.py  dependencies.txt  generate_embedding.py  network_detect_ticnet_licnet.py  pyproject.toml  requirements.txt  run_example.py
multimodal_coordination/: __init__.py  __main__.py  config.py  database.py  detection.py  embeddings.py  networks.py  pipeline.py
